# personal-website

./: .gitignore  Cargo.toml  Dockerfile  deploy.sh  get_spotify_token.sh  guestbook.db
src/: db.rs  handlers.rs  lastfm.rs  main.rs  models.rs  ratelimiter.rs  spotify.rs  state.rs  templates.rs  urldecode.rs
src.bak/: lastfm.rs  main.rs  projects.rs  ratelimiter.rs  templates.rs  threadpool.rs
src.bak/ui/: components.rs  mod.rs  pages.rs
src/api/: lastfm.rs  mod.rs  wttr.rs
src/ui/: components.rs  layout.rs  mod.rs  pages.rs
src/util/: cache.rs  mod.rs  rate_limiter.rs  threadpool.rs
static/: ascii.txt  bulletpoints.txt  index.html  projects.toml  styles.css  welcome.txt
static/script/: message.js  server_time.js
static/style/: styles.css
