[package]
name = "personal-website"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.41"
dotenv = "0.15.0"
maud = "0.27.0"
rusqlite = { version = "0.36.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tiny_http = "0.12.0"
toml = "0.8.23"
ureq = { version = "2.9", features = ["json"] }
url = "2.5.8"
